--- a/css/style.css
+++ b/css/style.css
@@ -9,6 +9,17 @@ display: flex;
 flex-direction: column;
 background-image: url(../image/gameBk.jpg);
 }
+nav {
+  display: flex;
+  height: 60px;
+  background-color:#e6dfc2;
+  font-size: 24px;
+  font-weight: bold;
+  color: white;
+  justify-content: space-between;
+}
+
+
 section.board {
   display: grid;
   grid-template-rows: repeat(9, 6vmin);
